crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_consider_using_sys_exit_2.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: ConsiderUsingSysExit
    body: "Use `sys.exit()` instead of `exit`"
    commit: "Replace `exit` with `sys.exit()`"
    fixable: true
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 4
  fix:
    content: sys2.exit
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 4
  parent: ~
- kind:
    name: ConsiderUsingSysExit
    body: "Use `sys.exit()` instead of `quit`"
    commit: "Replace `quit` with `sys.exit()`"
    fixable: true
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 4
  fix:
    content: sys2.exit
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 4
  parent: ~
- kind:
    name: ConsiderUsingSysExit
    body: "Use `sys.exit()` instead of `exit`"
    commit: "Replace `exit` with `sys.exit()`"
    fixable: true
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 8
  fix:
    content: sys2.exit
    location:
      row: 8
      column: 4
    end_location:
      row: 8
      column: 8
  parent: ~
- kind:
    name: ConsiderUsingSysExit
    body: "Use `sys.exit()` instead of `quit`"
    commit: "Replace `quit` with `sys.exit()`"
    fixable: true
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 8
  fix:
    content: sys2.exit
    location:
      row: 9
      column: 4
    end_location:
      row: 9
      column: 8
  parent: ~

