crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_consider_using_sys_exit_6.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: ConsiderUsingSysExit
    body: "Use `sys.exit()` instead of `exit`"
    commit: "Replace `exit` with `sys.exit()`"
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 4
  fix: ~
  parent: ~
- kind:
    name: ConsiderUsingSysExit
    body: "Use `sys.exit()` instead of `quit`"
    commit: "Replace `quit` with `sys.exit()`"
    fixable: true
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 4
  fix: ~
  parent: ~

