crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_sys_exit_alias_0.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `exit`"
    suggestion: "Replace `exit` with `sys.exit()`"
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 4
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 0
        content: "import sys\n"
      - location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 4
        content: sys.exit
  parent: ~
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `quit`"
    suggestion: "Replace `quit` with `sys.exit()`"
    fixable: true
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 4
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 0
        content: "import sys\n"
      - location:
          row: 2
          column: 0
        end_location:
          row: 2
          column: 4
        content: sys.exit
  parent: ~
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `exit`"
    suggestion: "Replace `exit` with `sys.exit()`"
    fixable: true
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 8
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 0
        content: "import sys\n"
      - location:
          row: 6
          column: 4
        end_location:
          row: 6
          column: 8
        content: sys.exit
  parent: ~
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `quit`"
    suggestion: "Replace `quit` with `sys.exit()`"
    fixable: true
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 8
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 0
        content: "import sys\n"
      - location:
          row: 7
          column: 4
        end_location:
          row: 7
          column: 8
        content: sys.exit
  parent: ~

