crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_sys_exit_alias_1.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `exit`"
    suggestion: "Replace `exit` with `sys.exit()`"
    fixable: true
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 4
  fix:
    edits:
      - content: import sys
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 10
      - content: sys.exit
        location:
          row: 3
          column: 0
        end_location:
          row: 3
          column: 4
  parent: ~
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `quit`"
    suggestion: "Replace `quit` with `sys.exit()`"
    fixable: true
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 4
  fix:
    edits:
      - content: import sys
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 10
      - content: sys.exit
        location:
          row: 4
          column: 0
        end_location:
          row: 4
          column: 4
  parent: ~
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `exit`"
    suggestion: "Replace `exit` with `sys.exit()`"
    fixable: true
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 8
  fix:
    edits:
      - content: import sys
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 10
      - content: sys.exit
        location:
          row: 8
          column: 4
        end_location:
          row: 8
          column: 8
  parent: ~
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `quit`"
    suggestion: "Replace `quit` with `sys.exit()`"
    fixable: true
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 8
  fix:
    edits:
      - content: import sys
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 10
      - content: sys.exit
        location:
          row: 9
          column: 4
        end_location:
          row: 9
          column: 8
  parent: ~
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `exit`"
    suggestion: "Replace `exit` with `sys.exit()`"
    fixable: true
  location:
    row: 15
    column: 4
  end_location:
    row: 15
    column: 8
  fix:
    edits: []
  parent: ~
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `quit`"
    suggestion: "Replace `quit` with `sys.exit()`"
    fixable: true
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 8
  fix:
    edits: []
  parent: ~

